--- a/charts/kubezero-istio/charts/istio-discovery/values.yaml
+++ b/charts/kubezero-istio/charts/istio-discovery/values.yaml
@@ -65,6 +65,10 @@ pilot:
 
 
 sidecarInjectorWebhook:
+  # If enabled, the legacy webhook selection logic will be used. This relies on filtering of webhook
+  # requests in Istiod, rather than at the webhook selection level.
+  # This is option is intended for migration purposes only and will be removed in Istio 1.10.
+  useLegacySelectors: true
   # You can use the field called alwaysInjectSelector and neverInjectSelector which will always inject the sidecar or
   # always skip the injection on pods that match that label selector, regardless of the global policy.
   # See https://istio.io/docs/setup/kubernetes/additional-setup/sidecar-injection/#more-control-adding-exceptions
@@ -90,13 +94,41 @@ sidecarInjectorWebhook:
   # Only one environment should have this enabled.
   enableNamespacesByDefault: false
 
-  # Enable objectSelector to filter out pods with no need for sidecar before calling istio-sidecar-injector.
-  # It is disabled by default since this function will only work after k8s v1.15.
+  # Enable objectSelector to filter out pods with no need for sidecar before calling istiod.
+  # It is enabled by default as the minimum supported Kubernetes version is 1.15+
   objectSelector:
-    enabled: false
+    enabled: true
     autoInject: true
 
   rewriteAppHTTPProbe: true
+
+  # Templates defines a set of custom injection templates that can be used. For example, defining:
+  #
+  # templates:
+  #   hello: |
+  #     metadata:
+  #       labels:
+  #         hello: world
+  #
+  # Then starting a pod with the `inject.istio.io/templates: hello` annotation, will result in the pod
+  # being injected with the hello=world labels.
+  # This is intended for advanced configuration only; most users should use the built in template
+  templates: {}
+
+  # Default templates specifies a set of default templates that are used in sidecar injection.
+  # By default, a template `sidecar` is always provided, which contains the template of default sidecar. 
+  # To inject other additional templates, define it using the `templates` option, and add it to 
+  # the default templates list.
+  # For example:
+  #
+  # templates:
+  #   hello: |
+  #     metadata:
+  #       labels:
+  #         hello: world
+  #
+  # defaultTemplates: ["sidecar", "hello"]
+  defaultTemplates: []
 istiodRemote:
   # Sidecar injector mutating webhook configuration url
   # For example: https://$remotePilotAddress:15017/inject
@@ -150,26 +182,20 @@ ownerName: ""
 # meshConfig defines runtime configuration of components, including Istiod and istio-agent behavior
 # See https://istio.io/docs/reference/config/istio.mesh.v1alpha1/ for all available options
 meshConfig:
-
+  enablePrometheusMerge: true
   # Config for the default ProxyConfig.
   # Initially using directly the proxy metadata - can also be activated using annotations
   # on the pod. This is an unsupported low-level API, pending review and decisions on
   # enabling the feature. Enabling the DNS listener is safe - and allows further testing
   # and gradual adoption by setting capture only on specific workloads. It also allows
   # VMs to use other DNS options, like dnsmasq or unbound.
-  defaultConfig:
-    proxyMetadata:
-      # If empty, agent will not start :15013 DNS listener and will not attempt
-      # to connect to Istiod DNS-TLS. This will also disable the core dns sidecar in
-      # istiod and the dns-over-tls listener.
-      # DNS_AGENT: DNS-TLS
-      DNS_AGENT: ""
 
   # The namespace to treat as the administrative root namespace for Istio configuration.
   # When processing a leaf namespace Istio will search for declarations in that namespace first
   # and if none are found it will search in the root namespace. Any matching declaration found in the root namespace
   # is processed as if it were declared in the leaf namespace.
-  rootNamespace: "istio-system"
+
+  rootNamespace:
 
   # TODO: the intent is to eventually have this enabled by default when security is used.
   # It is not clear if user should normally need to configure - the metadata is typically
@@ -180,6 +206,8 @@ meshConfig:
   # No hurry to do this in 1.6, we're trying to prove the code.
 
 global:
+  # Used to locate istiod.
+  istioNamespace: istio-system
   # enable pod disruption budget for the control plane, which is used to
   # ensure Istio control plane components are gradually upgraded or recovered.
   defaultPodDisruptionBudget:
@@ -199,15 +227,12 @@ global:
     #   cpu: 100m
     #   memory: 128Mi
 
-  # Used to locate istiod.
-  istioNamespace: istio-system
-
   # Default hub for Istio images.
   # Releases are published to docker hub under 'istio' project.
   # Dev builds from prow are on gcr.io
-  hub: gcr.io/istio-testing
+  hub: docker.io/istio
   # Default tag for Istio images.
-  tag: latest
+  tag: 1.9.0
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
@@ -353,12 +378,11 @@ global:
 
   # The customized CA address to retrieve certificates for the pods in the cluster.
   # CSR clients such as the Istio Agent and ingress gateways can use this to specify the CA endpoint.
+  # If not set explicitly, default to the Istio discovery address.
   caAddress: ""
 
   # External istiod controls all remote clusters: disabled by default
   externalIstiod: false
-  # Central istiod controls all remote clusters: disabled by default
-  centralIstiod: false
 
   # Configure the policy for validating JWT.
   # Currently, two options are supported: "third-party-jwt" and "first-party-jwt".
@@ -483,3 +507,6 @@ global:
 
   # Deprecated, use meshConfig.trustDomain
   trustDomain: ""
+base:
+  # For istioctl usage to disable istio config crds in base
+  enableIstioConfigCRDs: true
