--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -1,6 +1,6 @@
 global:
-  hub: docker.io/istio
-  tag: 1.8.2
+  # hub: docker.io/istio
+  # tag: 1.9.0
 
   logAsJson: true
   jwtPolicy: first-party-jwt
