--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -20,6 +20,7 @@ tlsCipherSuites: [TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES
 featureGates:
   CSIMigrationAWS: true
   CSIMigrationAWSComplete: true
+  CustomCPUCFSQuotaPeriod: true
 {{- end }}
 kubeReserved:
   cpu: 50m
