--- a/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/deployment.yaml
@@ -137,7 +137,7 @@ spec:
             cpu: 10m
           limits:
             memory: 20Mi
-            cpu: 100m
+            #cpu: 100m
 
         volumeMounts:
         - name: config
