--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -11,7 +11,7 @@ eck-operator:
     node-role.kubernetes.io/master: ""
 
 # Version for ElasticSearch and Kibana have to match so we define it at top-level
-version: 7.10.1
+version: 7.11.1
 
 elastic_password: "" # super_secret_elastic_password
 
@@ -192,8 +192,15 @@ fluentd:
 
 fluent-bit:
   enabled: false
-  test:
-    enabled: false
+
+  serviceMonitor:
+    enabled: true
+    selector:
+      release: metrics
+
+  tolerations:
+  - key: node-role.kubernetes.io/master
+    effect: NoSchedule
 
   config:
     output:
@@ -211,11 +218,115 @@ fluent-bit:
     #extraRecords:
     #  source.clustername: MyKubeCluster
 
-  serviceMonitor:
-    enabled: true
-    selector:
-      release: metrics
+    service: |
+      [SERVICE]
+          Flush {{ .Values.config.flushInterval }}
+          Daemon Off
+          Log_Level {{ .Values.config.logLevel }}
+          Parsers_File parsers.conf
+          Parsers_File custom_parsers.conf
+          HTTP_Server On
+          HTTP_Listen 0.0.0.0
+          HTTP_Port {{ .Values.service.port }}
+    inputs: |
+      [INPUT]
+          Name tail
+          Path /var/log/containers/*.log
+          Parser cri-log
+          Tag cri.*
+          Skip_Long_Lines On
+          DB /var/log/flb_kube.db
+          DB.Sync Normal
+          {{- with .Values.config.input }}
+          Mem_Buf_Limit {{ default "16MB" .memBufLimit }}
+          Refresh_Interval {{ default 10 .refreshInterval }}
+          {{- end }}
 
-  tolerations:
-  - key: node-role.kubernetes.io/master
-    effect: NoSchedule
+    filters: |
+      [FILTER]
+          Name    lua
+          Match   cri.*
+          script  /fluent-bit/scripts/kubezero.lua
+          call    reassemble_cri_logs
+
+      [FILTER]
+          Name kubernetes
+          Match cri.*
+          Merge_Log On
+          Merge_Log_Key kube
+          Kube_Tag_Prefix cri.var.log.containers.
+          Keep_Log Off
+          K8S-Logging.Parser Off
+          K8S-Logging.Exclude Off
+
+      {{- if index .Values "config" "extraRecords" }}
+
+      [FILTER]
+          Name record_modifier
+          Match cri.*
+          {{- range $k,$v := index .Values "config" "extraRecords" }}
+          Record {{ $k }} {{ $v }}
+          {{- end }}
+      {{- end }}
+
+      [FILTER]
+          Name rewrite_tag
+          Match cri.*
+          Emitter_Name kube_tag_rewriter
+          Rule logtag F kube.$kubernetes['namespace_name'].$kubernetes['container_name'] false
+
+      [FILTER]
+          Name    lua
+          Match   kube.*
+          script  /fluent-bit/scripts/kubezero.lua
+          call    nest_k8s_ns
+
+    outputs: |
+      [OUTPUT]
+          Match *
+          Name forward
+          Host {{ .Values.config.output.host }}
+          Port 24224
+          Shared_Key {{ .Values.config.output.sharedKey }}
+          tls {{ ternary "on" "off" .Values.config.output.tls }}
+          Send_options true
+          Require_ack_response true
+
+    customParsers: |
+      [PARSER]
+          Name cri-log
+          Format regex
+          Regex ^(?<time>[^ ]+) (?<stream>stdout|stderr) (?<logtag>[^ ]*) (?<log>.*)$
+          Time_Key    time
+          Time_Format %Y-%m-%dT%H:%M:%S.%L%z
+
+  luaScripts:
+    kubezero.lua: |
+      local reassemble_state = {}
+
+      function reassemble_cri_logs(tag, timestamp, record)
+         local reassemble_key = tag
+         if record.logtag == 'P' then
+            reassemble_state[reassemble_key] = reassemble_state[reassemble_key] or "" .. record.log
+            return -1, 0, 0
+         end
+         record.log = reassemble_state[reassemble_key] or "" .. (record.log or "")
+         reassemble_state[reassemble_key] = nil
+         return 1, timestamp, record
+      end
+
+      function nest_k8s_ns(tag, timestamp, record)
+          if not record['kubernetes']['namespace_name'] then
+              return 0, 0, 0
+          end
+          new_record = {}
+          for key, val in pairs(record) do
+              if key == 'kube' then
+                  new_record[key] = {}
+                  new_record[key][record['kubernetes']['namespace_name']] = record[key]
+              else
+                  new_record[key] = record[key]
+              end
+          end
+          return 1, timestamp, new_record
+      end
